--- a/React_Website/package.json
+++ b/React_Website/package.json
@@ -2,7 +2,7 @@
   "name": "my_projects",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fj99.github.io/My-Projects/",
+  "homepage": "https://fj99.github.io/Cameron-Peters/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@emotion/react": "^11.11.1",
