--- a/React_Website/package.json
+++ b/React_Website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my_projects",
+  "name": "cameron-peters",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://fj99.github.io/Cameron-Peters/",
